<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="xyz.truenight.quotations.activity.MainActivity">
    <item
        android:id="@+id/action_name"
        android:orderInCategory="100"
        android:title="@string/name"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_ask"
        android:orderInCategory="100"
        android:title="@string/ask"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_bid"
        android:orderInCategory="100"
        android:title="@string/bid"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_spread"
        android:orderInCategory="100"
        android:title="@string/spread"
        app:showAsAction="never"/>
</menu>
