<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="me.tatarka.bindingcollectionadapter2.LayoutManagers"/>

        <variable
            name="vm"
            type="xyz.truenight.quotations.viewmodel.MainViewModel"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="xyz.truenight.quotations.activity.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:supportActionBar="@{true}"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/title_margin"
                    android:layout_marginStart="@dimen/title_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/sortType"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/sort_by"
                        android:inputType="textNoSuggestions"
                        android:onClick="@{(v) -> vm.sortClick(v)}"
                        android:text="@{vm.sortField}"/>

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/sortType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/actionBarItemBackground"
                    android:onClick="@{() -> vm.sortTypeClick()}"
                    android:padding="@dimen/button_padding"
                    android:src="@{vm.sortAsc ? @drawable/ic_arrow_up : @drawable/ic_arrow_down}"
                    app:layout_constraintBottom_toBottomOf="@+id/sort"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/sort"
                    tools:src="@drawable/ic_arrow_up"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/field_margin"
                    android:gravity="center"
                    android:text="@string/symbol"
                    android:textAllCaps="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/divider1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    android:id="@+id/divider1"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/name"
                    app:layout_constraintRight_toLeftOf="@+id/bid_ask"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="86dp"/>

                <TextView
                    android:id="@+id/bid_ask"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/field_margin"
                    android:gravity="center"
                    android:text="@string/bid_ask_column"
                    android:textAllCaps="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/divider2"
                    app:layout_constraintStart_toEndOf="@+id/divider1"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/bid_ask"
                    app:layout_constraintRight_toLeftOf="@+id/spread"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/spread"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/field_margin"
                    android:gravity="center"
                    android:text="@string/spread_column"
                    android:textAllCaps="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/divider2"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintTop_toTopOf="parent"/>

            </android.support.constraint.ConstraintLayout>

            <android.support.v4.widget.SwipeRefreshLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:enabled="@{false}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sort"
                app:refreshing="@{vm.loading}">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/fab_inset"
                    app:itemBinding="@{vm.binding}"
                    app:items="@{vm.items}"
                    app:itemTouchHelper="@{vm.swipeListener}"
                    app:layoutManager="@{LayoutManagers.linear}"/>

            </android.support.v4.widget.SwipeRefreshLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{(v) -> vm.addClick(v)}"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_add_white"/>

    </android.support.design.widget.CoordinatorLayout>

</layout>